# HotelManager

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  engine.cfg  hotelmanager-godot.patch  launch_editor.sh  launch_game.sh
.gitlab-ci/: codestyle_check.sh
doc/: Doxyfile
ext_res/: README.md
game/: Notification.tscn  README.md  engine.cfg  launch_editor.sh  launch_game.sh
game/ext_res/: README.md
game/fonts/: cabin.fnt  cabin.inc  teen-bold-italic.fnt  teen-bold-italic.inc  teen-bold.fnt  teen-bold.inc  teen-italic.fnt  teen-italic.inc  teen.fnt  teen.inc
game/gamedata/: achievementgroups.csv  achievements.csv  character.csv  missionobjectives.csv  missions.csv  names.csv  room.csv  tilegroups.csv  tiles.csv
game/icons/: generate_menu_icons_alternates.sh
game/scenes/: MusicPlayer.tscn  Notification.tscn  game_scene.tscn  gametileset_build.tscn  loading.tscn  main_menu.tscn  options_scene.tscn
game/scripts/: game_map.gd  game_scene.gd  global.gd  ingame_musicplayer.gd  main_menu.gd  options_scene.gd
game/tiles/: game-tileset.tres
godotengine/: .gitignore  SConstruct
godotengine/core/: dvector.h  hash_map.h  list.h  map.h  vector.h
godotengine/main/: main.cpp
our_res/: characters.xpm  icon_hire.xcf  menu_icons.xcf
res/: README.md  test-tileset.xml
res/tiles/: game-tileset.tres
scenes/: game_scene.tscn  gametileset_build.tscn  main_menu.tscn  options_scene.tscn  play_menu.tscn  playground.tscn
scripts/: game_scene.gd  input_menu.gd  main_menu.gd  main_menu_quit.gd  options_scene.gd  play_menu.gd
(+103 files in other folders)
